--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">EmailClient</string>
+    <string name="logo">Logo</string>
+    <string name="emailHint">邮箱</string>
+    <string name="pswHint">密码</string>
+    <string name="signIn">登录</string>
+    <string name="checkCodeHint">验证码</string>
+    <string name="regetCode">重新获取</string>
 </resources>
