--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="checkCodeHint">验证码</string>
     <string name="regetCode">重新获取</string>
     <string name="addAccount">添加</string>
+    <string name="send">发件人</string>
+    <string name="to">收件人</string>
+    <string name="subject">主题</string>
+    <string name="writeEmail">撰写电子邮件</string>
 </resources>
