--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="emailHint">邮箱</string>
     <string name="pswHint">密码</string>
     <string name="signIn">登录</string>
+    <string name="signUp">注册</string>
     <string name="checkCodeHint">验证码</string>
     <string name="regetCode">重新获取</string>
     <string name="addAccount">添加</string>
