--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="logo">Logo</string>
     <string name="emailHint">邮箱</string>
     <string name="pswHint">密码</string>
+    <string name="userName">用户名</string>
     <string name="signIn">登录</string>
     <string name="signUp">注册</string>
     <string name="checkCodeHint">验证码</string>
